# digitalhack

./: LICENSE  README.md  prime_box.ipynb  pyproject.toml
application/: package-lock.json  package.json
application/src/: App.css  App.js  index.js
application/src/components/: AboutPage.jsx  CreatePlantPage.jsx  TitlePage.jsx  UploadFileElem.jsx  WorkingPage.jsx
application/src/components/dbs/: 1.js  data2.js  data3.json  data_0.0.2.csv  records.js
scripts/data/: .~lock.Пример результата.xlsx#  transform.ipynb
scripts/data/datasets/: Пояснение к датасету.docx  Пример результата.xlsx
scripts/data/plantsdata/: plantsdata.csv  regions.xlsx
scripts/map/: cities_sun.xlsx  map_labels.html  map_stats.ipynb  plot_map.ipynb
scripts/sql/: adding_data.ipynb  constants.py  database.ini  integration.ipynb  reading.py
scripts/web/: app.py
scripts/web/templates/: index.html  next_page.html
