[tool.poetry]
name = "digitalhack"
version = "0.1.0"
description = ""
authors = ["Rinat Sharafetdinov <rinat.sharafetdinov42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
torch = "^2.0.1"
transformers = "^4.29.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
